--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="skins" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\skins.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="light_theme" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\light_theme.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sound_yes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sound_yes1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -159,5 +162,8 @@
   </data>
   <data name="backgroundMainMenu1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backgroundMainMenu1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_theme" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark_theme.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
